2017-12-06  Sam Steingold  <sds@gnu.org>

	Make sure the Darwin foo.dSYM directories are removed by clean et al.
	* makemake.in (exefiles, EXERM): New variables.
	Used throughout to ensure removal of .dSYM. Cf. patch#50.

2017-12-05  Jörg Höhle  <hoehle@users.sourceforge.net>

	* loop.lisp (destructure-type): In LOOP destructuring, type NIL
	originally meant: "Skip type declaration for this variable" (patch#53).

2017-12-05  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (print-tables-2): Do not output unnecessary
	prototypes, but output code to avoid the -Wunused-parameter warning.
	Similar to the 2017-11-29 foreign1.lisp patch.

2017-12-05  Ken Brown  <kbrown@cornell.edu>

	* encoding.d (encoding_from_name) [UNIX_CYGWIN]: Use Unix line
	endings (patch#47).

2017-12-04  Jörg Höhle  <hoehle@users.sourceforge.net>

	* modules/regexp/regexi.c (REGEXP-COMPILE, REGEXP-EXEC) [UNICODE]:
	Use UTF-8 to communicate with gnulib/regexp, but keep
	O(misc_encoding) for locale-dependent error messages.

2017-12-04  Jörg Höhle  <hoehle@users.sourceforge.net>

	* modules/regexp/regexi.c (REGEXP-EXEC): Compute character string
	index based on the current O(misc_encoding).

2017-12-04  Sam Steingold  <sds@gnu.org>

	* configure.in: Move gl_EARLY before AC_LIB_PROG_LD to avoid aclocal
	warning: AC_COMPILE_IFELSE was called before AC_USE_SYSTEM_EXTENSIONS

2017-12-04  Sam Steingold  <sds@gnu.org>

	* configure: Ensure exit on a pipe sub-command failure (regression
	since 2017-02-26) by using bash/ksh/zsh-specific "set -o pipefail".

2017-12-04  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp: General cleanup.
	"465 exported symbols, 46 undocumented, 7 without pari function"

2017-12-03  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-doc): Respect command line options like
	make check-doc IMPNOTES=../doc/html/ CLHSROOT=http://clhs.lisp.se/
	(note the trailing slash!)

2017-12-01  Sam Steingold  <sds@gnu.org>

	Fix bug#659: update the pari module to PARI/GP 2.9.3